changes that made docker work properly

--- a/students-ui/nginx.conf
+++ b/students-ui/nginx.conf
@@ -16,7 +16,7 @@
 # }
 
 
-### works without backend container
+### works without backend container 
 
 server {
   listen 80;
@@ -34,4 +34,25 @@ server {
   #   proxy_set_header Host $host;
   #   proxy_http_version 1.1;
   # }
+}
+
+server {
+  listen       80;
+  server_name  localhost;
+  root /usr/share/nginx/html;
+  index index.html;
+
+  location / {
+    try_files $uri $uri/ /index.html;
+  }
+
+  # Proxy API requests to the API container by service name
+  location /api/ {
+    proxy_pass         http://api:5000;
+    proxy_http_version 1.1;
+    proxy_set_header   Host $host;
+    proxy_set_header   X-Real-IP $remote_addr;
+    proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header   X-Forwarded-Proto $scheme;
+  }
 }
