--- a/DevopsBasic/DevopsBasic.csproj
+++ b/DevopsBasic/DevopsBasic.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+
 		<TargetFramework>net8.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
