docker file changes

--- a/DevopsBasic/Dockerfile
+++ b/DevopsBasic/Dockerfile
@@ -3,8 +3,15 @@
 # ========================
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY . .
-RUN dotnet restore
+
+# COPY . .
+# RUN dotnet restore
+
+COPY DevopsBasic/DevopsBasic.csproj ./DevopsBasic/
+RUN dotnet restore DevopsBasic/DevopsBasic.csproj
+COPY DevopsBasic/. ./DevopsBasic/
+RUN dotnet publish DevopsBasic/DevopsBasic.csproj ...
+
 RUN dotnet publish -c Release -o /app/publish /p:UseAppHost=false
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
